feat: セッション無効時のエラーハンドリング実装 (US-001-02)
- getSessionErrorReason Server Actionを追加
  - クイズ開始済み時: 'quiz_started'
  - セッション無効時: 'session_expired'
- EventPageでセッションエラー理由を判定
- NicknameFormにerrorReasonプロップを追加
  - クイズ開始済みメッセージ表示
  - セッション無効メッセージ表示
- RSCでのprops受け渡しで実装（URLクエリパラメータ不使用）
- 仕様ドキュメント(001-ユーザー参加とセッション管理.md)を更新
  - US-001-02の全受け入れ基準にチェック
- copilot-instructionsに開発ワークフロー追記
  - ブランチ命名規則
  - 仕様更新フロー
  - 実装・テストフロー

テスト: ✅ 70 tests passing
ビルド: ✅ Successfully compiled

--- a/docs/spec/001-ユーザー参加とセッション管理.md
+++ b/docs/spec/001-ユーザー参加とセッション管理.md
@@ -5,19 +5,19 @@
 
 ## ユーザーストーリー
 
-### US-001-01: ユーザーの初回アクセス
+### [US-001-01](https://github.com/maaaaakoto35/PeriodQuiz/pull/4): ユーザーの初回アクセス
 **As a** user  
 **I want to** システムにアクセスしてニックネームを入力する  
 **So that** クイズに参加できる
 
 #### 受け入れ基準
-- [ ] ユーザーが初回アクセス時にニックネーム入力画面が表示される
-- [ ] ニックネームは1文字以上20文字以内で入力できる
-- [ ] ニックネームに使用できる文字種を制限する（例: 英数字、ひらがな、カタカナ、漢字）
-- [ ] **重複するニックネームの入力を防ぐ（同じニックネームは許容しない）**
-- [ ] ニックネーム入力後、セッションが確立される
-- [ ] セッション確立後、待機画面に遷移する
-- [ ] **クイズ開始後は新規ユーザーの登録（ニックネーム入力）ができない**
+- [x] ユーザーが初回アクセス時にニックネーム入力画面が表示される
+- [x] ニックネームは1文字以上20文字以内で入力できる
+- [x] ニックネームに使用できる文字種を制限する（例: 英数字、ひらがな、カタカナ、漢字）
+- [x] **重複するニックネームの入力を防ぐ（同じニックネームは許容しない）**
+- [x] ニックネーム入力後、セッションが確立される
+- [x] セッション確立後、待機画面に遷移する
+- [x] **クイズ開始後は新規ユーザーの登録（ニックネーム入力）ができない**
 
 #### 技術的考慮事項
 - セッションIDはサーバー側で生成
@@ -32,10 +32,10 @@
 **So that** 進行中のクイズに継続して参加できる
 
 #### 受け入れ基準
-- [ ] ブラウザのリロード後もセッションが維持される
-- [ ] セッションが有効な場合、ニックネーム入力をスキップして現在の画面に戻る
-- [ ] **クイズ途中でリロードしても、セッションが保たれていれば復活可能**
-- [ ] セッションが無効な場合、ニックネーム入力画面に戻る（ただしクイズ開始後は登録不可）
+- [x] ブラウザのリロード後もセッションが維持される
+- [x] セッションが有効な場合、ニックネーム入力をスキップして現在の画面に戻る
+- [x] **クイズ途中でリロードしても、セッションが保たれていれば復活可能**
+- [x] セッションが無効な場合、ニックネーム入力画面に戻る（ただしクイズ開始後は登録不可）
 
 #### 技術的考慮事項
 - Cookie、LocalStorage、またはSessionStorageを使用
