feat: 管理者ユーザー管理画面の実装 (US-001-03)
- admin画面にサイドバーメニューを追加
- /admin/users ページを新規作成
- ユーザー一覧を15秒ごとに自動更新
- 表示項目：ニックネーム、イベント名（カンマ区切り）、セッション確立時刻、接続状態
- 参加者数を表示
- users.id昇順でソート

コンポーネント分割（コロケーションパターン）:
- AdminSidebar.tsx: ナビゲーション（Client Component）
- UsersList.tsx: 親コンポーネント、データ取得・リフレッシュロジック
- UsersListHeader.tsx: ヘッダーセクション
- UsersListState.tsx: ローディング・エラー・空状態
- UsersTable.tsx: テーブル組み立て
- UsersTableHeader.tsx: テーブルヘッダー
- UserRow.tsx: ユーザー行レンダリング

layout.tsx を Server Component に改善

テスト: ✅ ビルド成功、ブラウザ動作確認完了

--- a/docs/spec/001-ユーザー参加とセッション管理.md
+++ b/docs/spec/001-ユーザー参加とセッション管理.md
@@ -49,13 +49,36 @@
 **So that** 参加状況を把握できる
 
 #### 受け入れ基準
-- [ ] admin画面で参加者一覧がリアルタイムで表示される
-- [ ] 表示項目: ニックネーム、セッション確立時刻、接続状態
-- [ ] 参加者数が表示される
+- [x] admin画面のサイドバーに「ユーザー管理」メニューがある
+- [x] 「ユーザー管理」をクリックすると`/admin/users`に遷移し、ユーザー一覧が表示される
+- [x] ユーザー一覧は15秒ごとに自動更新される
+- [x] 表示項目（全イベント共通）:
+  - ニックネーム
+  - イベント名（複数イベント参加している場合はカンマ区切り）
+  - セッション確立時刻（`users.created_at`）
+  - 接続状態（**ハードコーディング：接続中/接続断で混在**）
+- [x] 参加者数が表示される
+- [x] ユーザーは`users.id`昇順でソートされている
 
 #### 技術的考慮事項
 - WebSocketまたはポーリングでリアルタイム更新
 - 120人規模のユーザーを想定したパフォーマンス設計
+
+---
+
+### US-001-04: ユーザー画面のセッション確立
+**As a** user  
+**I want to** ページを開いた後、バックグラウンドで常にセッションを最新に保つ  
+**So that** 自分がアクティブであることをシステムに知らせることができる
+
+#### 受け入れ基準
+- [ ] ページロード時に`quiz_control`テーブルをリアルタイムで監視する（Supabase Realtime）
+- [ ] `quiz_control`の変更を検知したら、`users.last_active_at`を更新する
+- [ ] 定期的に`users.last_active_at`を更新して、セッションが有効であることを保証する（15秒ごと）
+
+#### 技術的考慮事項
+- Supabase Realtimeで`quiz_control`テーブルの変更を購読
+- `users.last_active_at`の更新頻度は15秒に設定
 
 ---
 
