--- a/docs/spec/001-ユーザー参加とセッション管理.md
+++ b/docs/spec/001-ユーザー参加とセッション管理.md
@@ -72,13 +72,18 @@
 **So that** 自分がアクティブであることをシステムに知らせることができる
 
 #### 受け入れ基準
-- [ ] ページロード時に`quiz_control`テーブルをリアルタイムで監視する（Supabase Realtime）
-- [ ] `quiz_control`の変更を検知したら、`users.last_active_at`を更新する
-- [ ] 定期的に`users.last_active_at`を更新して、セッションが有効であることを保証する（15秒ごと）
+- [x] ページロード時に`quiz_control`テーブルをリアルタイムで監視する（Supabase Realtime）
+- [x] `quiz_control`の変更を検知したら、`users.last_active_at`を更新する
+- [x] 定期的に`users.last_active_at`を更新して、セッションが有効であることを保証する（15秒ごと）
 
 #### 技術的考慮事項
 - Supabase Realtimeで`quiz_control`テーブルの変更を購読
 - `users.last_active_at`の更新頻度は15秒に設定
+
+#### 実装詳細
+- **フック**: `useSessionHeartbeat` - Realtime監視と定期更新を管理
+- **コンポーネント**: `WaitingPageContent` - セッションステータス表示
+- **状態表示**: 接続中/更新中/エラーの3状態をインジケーターで表示
 
 ---
 
