--- a/docs/spec/002-クイズとピリオドの管理.md
+++ b/docs/spec/002-クイズとピリオドの管理.md
@@ -5,25 +5,23 @@
 
 ## ユーザーストーリー
 
-### US-002-01: クイズ問題の作成
+---
+
+### US-002-01: クイズイベントの設定
 **As an** admin  
-**I want to** クイズ問題を作成する  
-**So that** ユーザーに出題できる
+**I want to** 複数のピリオドをまとめたクイズイベントを作成する  
+**So that** イベント全体を管理できる
 
 #### 受け入れ基準
-- [ ] admin画面でクイズ問題作成フォームが利用できる
-- [ ] 入力項目:
-  - 問題文（必須、1000文字以内）
-  - **問題画像（任意）**
-  - 選択肢（2〜4個、各200文字以内）
-  - **各選択肢の画像（任意）**
-  - 正解（選択肢から1つ選択）
-- [ ] 問題の保存ができる
-- [ ] 保存済み問題の一覧が確認できる
+- [ ] クイズイベント作成画面が利用できる
+- [ ] イベントに名前を付けられる（例: "2025年10月クイズ大会"）
+- [ ] 作成済みのピリオドを選択してイベントに追加できる
+- [ ] ピリオドの実施順序を設定できる
+- [ ] イベントの開始・終了を制御できる
 
 #### 技術的考慮事項
-- 問題データの永続化
-- 問題の編集・削除機能も検討
+- イベント、ピリオド、問題の階層構造を管理
+- 現在進行中のイベントは1つのみ
 
 ---
 
@@ -46,21 +44,25 @@
 
 ---
 
-### US-002-03: クイズイベントの設定
+### US-002-03 クイズ問題の作成
 **As an** admin  
-**I want to** 複数のピリオドをまとめたクイズイベントを作成する  
-**So that** イベント全体を管理できる
+**I want to** クイズ問題を作成する  
+**So that** ユーザーに出題できる
 
 #### 受け入れ基準
-- [ ] クイズイベント作成画面が利用できる
-- [ ] イベントに名前を付けられる（例: "2025年10月クイズ大会"）
-- [ ] 作成済みのピリオドを選択してイベントに追加できる
-- [ ] ピリオドの実施順序を設定できる
-- [ ] イベントの開始・終了を制御できる
+- [ ] admin画面でクイズ問題作成フォームが利用できる
+- [ ] 入力項目:
+  - 問題文（必須、1000文字以内）
+  - **問題画像（任意）**
+  - 選択肢（2〜4個、各200文字以内）
+  - **各選択肢の画像（任意）**
+  - 正解（選択肢から1つ選択）
+- [ ] 問題の保存ができる
+- [ ] 保存済み問題の一覧が確認できる
 
 #### 技術的考慮事項
-- イベント、ピリオド、問題の階層構造を管理
-- 現在進行中のイベントは1つのみ
+- 問題データの永続化
+- 問題の編集・削除機能も検討
 
 ---
 
