--- a/docs/spec/002-クイズとピリオドの管理.md
+++ b/docs/spec/002-クイズとピリオドの管理.md
@@ -5,25 +5,21 @@
 
 ## ユーザーストーリー
 
-### US-002-01: クイズ問題の作成
+---
+
+### US-002-01: クイズイベントの設定
 **As an** admin  
-**I want to** クイズ問題を作成する  
-**So that** ユーザーに出題できる
+**I want to** 複数のピリオドをまとめたクイズイベントを作成する  
+**So that** イベント全体を管理できる
 
 #### 受け入れ基準
-- [ ] admin画面でクイズ問題作成フォームが利用できる
-- [ ] 入力項目:
-  - 問題文（必須、1000文字以内）
-  - **問題画像（任意）**
-  - 選択肢（2〜4個、各200文字以内）
-  - **各選択肢の画像（任意）**
-  - 正解（選択肢から1つ選択）
-- [ ] 問題の保存ができる
-- [ ] 保存済み問題の一覧が確認できる
+- [x] クイズイベント作成画面が利用できる
+- [x] イベントに名前を付けられる（例: "2025年10月クイズ大会"）
+- [x] イベントの説明文を追加できる
 
 #### 技術的考慮事項
-- 問題データの永続化
-- 問題の編集・削除機能も検討
+- イベント、ピリオド、問題の階層構造を管理
+- 現在進行中のイベントは1つのみ
 
 ---
 
@@ -46,25 +42,66 @@
 
 ---
 
-### US-002-03: クイズイベントの設定
+### US-002-02a: ピリオドの実施順序設定
 **As an** admin  
-**I want to** 複数のピリオドをまとめたクイズイベントを作成する  
-**So that** イベント全体を管理できる
+**I want to** イベント内でのピリオドの実施順序を設定する  
+**So that** 設定した順序でピリオドが実施される
 
 #### 受け入れ基準
-- [ ] クイズイベント作成画面が利用できる
-- [ ] イベントに名前を付けられる（例: "2025年10月クイズ大会"）
+- [ ] イベント編集時にピリオドの実施順序を変更できる
+- [ ] ドラッグ&ドロップまたは上下ボタンで順序を変更できる
+- [ ] 順序変更を保存できる
+- [ ] ピリオドを削除できる
 - [ ] 作成済みのピリオドを選択してイベントに追加できる
-- [ ] ピリオドの実施順序を設定できる
-- [ ] イベントの開始・終了を制御できる
 
 #### 技術的考慮事項
-- イベント、ピリオド、問題の階層構造を管理
-- 現在進行中のイベントは1つのみ
+- ピリオドの順序情報を保持
+- 順序変更時にユーザーに確認を取る
+
 
 ---
 
-### US-002-04: 問題の事前プレビュー
+### US-002-03: イベントの開始・終了制御
+**As an** admin  
+**I want to** イベントのステータスを管理し、開始・終了を制御する  
+**So that** イベント全体の流れを制御できる
+
+#### 受け入れ基準
+- [x] イベントのステータスを確認できる（ドラフト、実施中、一時停止、完了）
+- [x] ステータスを変更できる
+- [ ] ドラフト→実施中への変更時に必須項目（ピリオド等）をチェックできる
+- [ ] 実施中のイベントは1つのみに制限できる
+- [ ] イベント完了後はユーザーが参加できなくなる
+
+#### 技術的考慮事項
+- ステータス遷移ルールの実装
+- 実施中のイベント数をチェック
+
+---
+
+### US-002-04: クイズ問題の作成
+**As an** admin  
+**I want to** クイズ問題を作成する  
+**So that** ユーザーに出題できる
+
+#### 受け入れ基準
+- [ ] admin画面でクイズ問題作成フォームが利用できる
+- [ ] 入力項目:
+  - 問題文（必須、1000文字以内）
+  - **問題画像（任意）**
+  - 選択肢（2〜4個、各200文字以内）
+  - **各選択肢の画像（任意）**
+  - 正解（選択肢から1つ選択）
+- [ ] 問題の保存ができる
+- [ ] 保存済み問題の一覧が確認できる
+
+#### 技術的考慮事項
+- 問題データの永続化
+- 問題の編集・削除機能も検討
+
+---
+
+### US-002-05: 問題の事前プレビュー
 **As an** admin  
 **I want to** 作成した問題を事前にプレビューする  
 **So that** 問題に誤りがないか確認できる
