ストーリー修正

--- a/docs/spec/002-クイズとピリオドの管理.md
+++ b/docs/spec/002-クイズとピリオドの管理.md
@@ -23,45 +23,65 @@
 
 ---
 
-### US-002-02: ピリオドの作成と問題の紐付け
+### US-002-02: ピリオドの作成
 **As an** admin  
-**I want to** ピリオドを作成し、クイズ問題を紐付ける  
-**So that** セクションごとにクイズを実施できる
+**I want to** ピリオドを作成する
+**So that** イベントごとにセクションを作成できる
 
 #### 受け入れ基準
+- [ ] イベントごとにピリオド一覧を確認できる
 - [ ] ピリオド作成画面が利用できる
 - [ ] ピリオドに名前を付けられる（例: "第1ピリオド"）
-- [ ] 保存済みのクイズ問題から選択してピリオドに追加できる
-- [ ] 1ピリオドあたり10〜20問程度を推奨するが、制限は設けない
-- [ ] ピリオド内の問題の順序を設定できる
-- [ ] ピリオドの一覧が確認できる
-
-#### 技術的考慮事項
-- ピリオドと問題の多対多の関係を管理
-- 問題の順序情報を保持
-
----
-
-### US-002-02a: ピリオドの実施順序設定
-**As an** admin  
-**I want to** イベント内でのピリオドの実施順序を設定する  
-**So that** 設定した順序でピリオドが実施される
-
-#### 受け入れ基準
-- [ ] イベント編集時にピリオドの実施順序を変更できる
-- [ ] ドラッグ&ドロップまたは上下ボタンで順序を変更できる
-- [ ] 順序変更を保存できる
-- [ ] ピリオドを削除できる
-- [ ] 作成済みのピリオドを選択してイベントに追加できる
+- [ ] ピリオド更新画面が利用できる
+- [ ] ピリオド一覧画面で削除とピリオドの順序変更ができる
+  - [ ] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
 
 #### 技術的考慮事項
 - ピリオドの順序情報を保持
-- 順序変更時にユーザーに確認を取る
-
+- 順序変更時にユーザーに確認を行う
 
 ---
 
-### US-002-03: イベントの開始・終了制御
+### US-002-03: クイズ問題の作成
+**As an** admin  
+**I want to** クイズ問題を作成する  
+**So that** ユーザーに出題できる
+
+#### 受け入れ基準
+- [ ] admin画面でピリオドごとにクイズ一覧を確認できる
+- [ ] クイズ作成画面が利用できる
+- [ ] 入力項目:
+  - 問題文（必須、1000文字以内）
+  - **問題画像（任意）**
+  - 選択肢（2〜4個、各200文字以内）
+  - **各選択肢の画像（任意）**
+  - 正解（選択肢から1つ選択）
+- [ ] 問題の保存ができる
+- [ ] クイズ更新画面が利用できる
+- [ ] クイズ一覧画面で削除とクイズの順序変更ができる
+  - [ ] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
+
+#### 技術的考慮事項
+- 問題データの永続化
+- 問題の編集・削除機能も検討
+- クイズの順序情報を保持
+- 順序変更時にユーザーに確認を行う
+
+---
+
+### US-002-04: 問題の事前プレビュー
+**As an** admin  
+**I want to** 作成した問題を事前にプレビューする  
+**So that** 問題に誤りがないか確認できる
+
+#### 受け入れ基準
+- [ ] 問題の一覧画面からプレビューボタンでプレビューできる
+- [ ] ユーザーに表示される形式で問題が表示される
+- [ ] 正解も確認できる
+
+---
+
+### US-002-05: イベントの開始・終了制御
 **As an** admin  
 **I want to** イベントのステータスを管理し、開始・終了を制御する  
 **So that** イベント全体の流れを制御できる
@@ -79,42 +99,9 @@
 
 ---
 
-### US-002-04: クイズ問題の作成
-**As an** admin  
-**I want to** クイズ問題を作成する  
-**So that** ユーザーに出題できる
-
-#### 受け入れ基準
-- [ ] admin画面でクイズ問題作成フォームが利用できる
-- [ ] 入力項目:
-  - 問題文（必須、1000文字以内）
-  - **問題画像（任意）**
-  - 選択肢（2〜4個、各200文字以内）
-  - **各選択肢の画像（任意）**
-  - 正解（選択肢から1つ選択）
-- [ ] 問題の保存ができる
-- [ ] 保存済み問題の一覧が確認できる
-
-#### 技術的考慮事項
-- 問題データの永続化
-- 問題の編集・削除機能も検討
-
----
-
-### US-002-05: 問題の事前プレビュー
-**As an** admin  
-**I want to** 作成した問題を事前にプレビューする  
-**So that** 問題に誤りがないか確認できる
-
-#### 受け入れ基準
-- [ ] 問題の一覧画面からプレビューボタンでプレビューできる
-- [ ] ユーザーに表示される形式で問題が表示される
-- [ ] 正解も確認できる
-
----
-
 ## 非機能要件
 - **使いやすさ**: 管理画面は直感的で操作しやすいUI
+  - 背景色と同じ文字カラーは避け、読みやすいUIにする
 - **データ整合性**: 問題やピリオドの削除時に依存関係をチェック
 
 ## 依存関係
