feat: ピリオド管理機能を実装 (US-002-02)
全ての受け入れ基準を実装・テスト完了:
- イベントごとにピリオド一覧を確認できる
- ピリオド作成画面が利用可能
- ピリオドに名前を付けられる
- ピリオド更新画面が利用可能
- ピリオド一覧画面で削除と順序変更ができる
- 上下ボタンで順序を変更できる

実装内容:
- 5つのServer Actions (getPeriods, createPeriod, updatePeriod, deletePeriod, reorderPeriods)
- 3つのページコンポーネント (list, create, edit)
- 2つのUIコンポーネント (PeriodForm, PeriodList)
- トランザクション処理によるピリオド順序変更
- EventsList に期間管理へのナビゲーションリンクを追加
- フォーム入力の可読性向上 (黒いテキスト色を適用)

テスト: ✅ Chrome DevTools にて包括的なテスト完了
- ピリオドの作成、編集、削除
- 順序変更のテスト (UNIQUE制約の解決)
- レスポンシブデザイン検証 (mobile/tablet/desktop)

--- a/docs/spec/002-クイズとピリオドの管理.md
+++ b/docs/spec/002-クイズとピリオドの管理.md
@@ -29,12 +29,12 @@
 **So that** イベントごとにセクションを作成できる
 
 #### 受け入れ基準
-- [ ] イベントごとにピリオド一覧を確認できる
-- [ ] ピリオド作成画面が利用できる
-- [ ] ピリオドに名前を付けられる（例: "第1ピリオド"）
-- [ ] ピリオド更新画面が利用できる
-- [ ] ピリオド一覧画面で削除とピリオドの順序変更ができる
-  - [ ] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
+- [x] イベントごとにピリオド一覧を確認できる
+- [x] ピリオド作成画面が利用できる
+- [x] ピリオドに名前を付けられる（例: "第1ピリオド"）
+- [x] ピリオド更新画面が利用できる
+- [x] ピリオド一覧画面で削除とピリオドの順序変更ができる
+  - [x] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
 
 #### 技術的考慮事項
 - ピリオドの順序情報を保持
