fix: クイズ管理UIをピリオド管理と統一 + Supabase設定ドキュメント作成
- クイズ順序変更ボタンをSVGアイコンに統一
- ナンバリング形式を#で統一
- 画像有無をグリーンバッジで表示
- アクションボタン（編集・プレビュー・削除）をテキストリンク形式に統一
- ホバーエフェクトをピリオド管理と同じに統一
- Supabase Storage設定ガイドを作成（本番環境デプロイ時の手順記載）
- マイグレーション対応（quiz-images bucketの自動作成）

--- a/docs/spec/002-クイズとピリオドの管理.md
+++ b/docs/spec/002-クイズとピリオドの管理.md
@@ -48,18 +48,18 @@
 **So that** ユーザーに出題できる
 
 #### 受け入れ基準
-- [ ] admin画面でピリオドごとにクイズ一覧を確認できる
-- [ ] クイズ作成画面が利用できる
-- [ ] 入力項目:
+- [x] admin画面でピリオドごとにクイズ一覧を確認できる
+- [x] クイズ作成画面が利用できる
+- [x] 入力項目:
   - 問題文（必須、1000文字以内）
   - **問題画像（任意）**
   - 選択肢（2〜4個、各200文字以内）
   - **各選択肢の画像（任意）**
   - 正解（選択肢から1つ選択）
-- [ ] 問題の保存ができる
-- [ ] クイズ更新画面が利用できる
-- [ ] クイズ一覧画面で削除とクイズの順序変更ができる
-  - [ ] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
+- [x] 問題の保存ができる
+- [x] クイズ更新画面が利用できる
+- [x] クイズ一覧画面で削除とクイズの順序変更ができる
+  - [x] 順序変更はドラッグ&ドロップまたは上下ボタンで順序を変更できる
 
 #### 技術的考慮事項
 - 問題データの永続化
@@ -75,9 +75,9 @@
 **So that** 問題に誤りがないか確認できる
 
 #### 受け入れ基準
-- [ ] 問題の一覧画面からプレビューボタンでプレビューできる
-- [ ] ユーザーに表示される形式で問題が表示される
-- [ ] 正解も確認できる
+- [x] 問題の一覧画面からプレビューボタンでプレビューできる
+- [x] ユーザーに表示される形式で問題が表示される
+- [x] 正解も確認できる
 
 ---
 
