feat: イベントステータスのリファクタリングと画面制御の実装 (US-003-01)
- eventsテーブルから status と allow_registration を削除
- quiz_control.current_screen でイベントステータスを一元管理
  - waiting: ユーザー登録可能、登録後は待機画面に遷移
  - question: 問題回答画面
  - answer: 正解発表画面
  - break: 次の問題までの待機画面
  - period_result: ピリオド結果画面
  - final_result: 最終結果画面
- admin画面でイベント一覧から画面制御への導線を追加
- 画面制御ボタンで current_screen を変更可能に
  - 遷移時に current_period_id, current_question_id を自動更新
  - question画面への遷移時に question_displays をinsert
  - answer画面への遷移時に question_displays.closed_at を更新
  - period_result画面への遷移時に自動的に次ピリオドに移行
- updateQuizControl Server Action を実装
- quiz-transition.ts で画面遷移ルールを定義
- canRegisterNewUser で current_screen=waiting のみ登録可能に変更
- test seed データ を更新

テスト: ✅ 実装完了

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -2,25 +2,37 @@
 
 ## 概要
 管理者がユーザーの画面を一斉に制御し、クイズの進行を管理する機能。
+ユーザーの画面はオールスター感謝祭のクイズを模す。
 
 ## ユーザーストーリー
 
-### US-003-01: 待機画面の表示制御
-**As an** admin  
-**I want to** 全ユーザーを待機画面に遷移させる  
-**So that** クイズ開始前やピリオド間で待機させることができる
+### US-003-01: イベントのステータスのリファクタリング
+**As an** admin
+**I want to** イベントのステータス管理を保守しやすい形に変更する
+**So that** quiz_controlにイベントのステータス管理を移譲する
 
 #### 受け入れ基準
-- [ ] admin画面から「待機画面へ遷移」ボタンをクリックできる
-- [ ] 全ユーザーの画面が即座に待機画面に切り替わる
-- [ ] 待機画面には以下を表示:
-  - 次のピリオド名または「開始をお待ちください」等のメッセージ
-  - 参加者数
-- [ ] 遅れて参加したユーザーも待機画面に入る
+- [x] イベントのステータス管理が全てquiz_controlに移譲されていること
+- [x] 既存のステータス管理がquiz_controlを参照するようになっていること
+- [x] admin画面でイベント一覧から画面制御への導線があること
+- [x] 画面制御の画面では `current_screen` の制御ボタンを用いてステータスを変更できるようになっていること
+  - [x] 制御ボタンを押下するとステータスの変更に加え、`current_period_id` と `current_question_id` が更新されること
+    - `current_period.period_questions.order_num` を参照し、`current_question`よりも大きいquestionがない場合は、次のperiodを`current_period`にする
+    - `current_period.period_questions.order_num` を参照し、`current_question`よりも大きいquestionがある場合は、次のquestionを`current_question`にする
+    - `current_screen`が`period_result`になった場合に↑のロジックとは関係なく強制的に次のピリオドに移行する(`current_period`の更新と`current_question`の更新)
+  - [x] `current_screen`が`question`になった場合に`question_displays`がinsertされること
+  - [x] `current_screen`が`answer`になった場合にすでにある`question_displays.closed_at`が更新されること
+  - このストーリーでは実装しないが、後々制御セクションの下にユーザーに出ている画面がpreviewされるようにする予定
 
 #### 技術的考慮事項
-- WebSocketによるリアルタイム画面制御
-- 接続が一時的に切れたユーザーの再接続時の状態同期
+- eventsのステータスは全て `quiz_control.current_screen` で行う
+  - waiting -> ユーザーの登録可能、登録後は待機画面に遷移
+  - question -> current_question_idの問題回答画面(問題も表示されている)
+  - answer -> current_question_idの正解発表画面
+  - break -> 次の問題に行くまでの待機画面
+  - period_result -> current_period_idの結果画面
+  - final_result -> 紐づいているevent_idの最終結果画面
+- `events.allow_registration` は削除し、`quiz_control.current_screen` がwaitingの時のみユーザーの登録が可能にする
 
 ---
 
@@ -46,6 +58,7 @@
 #### 技術的考慮事項
 - 問題表示時刻を記録（回答時間計測の開始点）
 - 回答データ（ユーザーID、問題ID、選択肢、回答時刻）を保存
+- `answers.response_time_ms` はサーバー側で計算し、`現在時刻 - question_displays.displayed_at`の値を入れること
 
 ---
 
@@ -63,6 +76,9 @@
   - 自分の選択した選択肢（正解/不正解の表示）
   - 回答時間（秒単位）
 - [ ] 未回答だった場合、その旨が表示される
+- [ ] 以下のユーザーは次の画面にいけず、`quiz_control.current_period_id`が変わるまで脱落画面が表示される
+  - [ ] 未回答のユーザー
+  - [ ] 正解を選べなかったユーザー
 
 #### 技術的考慮事項
 - 正解データの取得
