feat: セッションハートビートとクイズ問題表示の実装 (US-003-02)
- SessionContextでセッションハートビートを統合管理
- useSessionHeartbeatフックの改良とテスト追加
- クイズ問題表示コンポーネントの新規作成（QuestionDisplay, QuestionContent）
- 選択肢ボタン関連コンポーネント（ChoiceButton, ChoiceButtonGroup）
- getQuizStatus, getQuestionWithChoices, submitAnswerのServer Actionsを実装
- セッション状態通知UIの改善
- レアルタイム通信ドキュメント更新
- 仕様ドキュメント (US-001, US-003) の完成度チェックボックス更新

テスト: ✅ useSessionHeartbeatテスト追加・改良完了

--- a/docs/spec/001-ユーザー参加とセッション管理.md
+++ b/docs/spec/001-ユーザー参加とセッション管理.md
@@ -72,18 +72,18 @@
 **So that** 自分がアクティブであることをシステムに知らせることができる
 
 #### 受け入れ基準
-- [x] ページロード時に`quiz_control`テーブルをリアルタイムで監視する（Supabase Realtime）
-- [x] `quiz_control`の変更を検知したら、`users.last_active_at`を更新する
 - [x] 定期的に`users.last_active_at`を更新して、セッションが有効であることを保証する（15秒ごと）
+- [x] ページロード時に初回更新を実行する
 
 #### 技術的考慮事項
-- Supabase Realtimeで`quiz_control`テーブルの変更を購読
-- `users.last_active_at`の更新頻度は15秒に設定
+- `users.last_active_at`の更新はServer Actionで実行
+- セッションIDはサーバー側で検証、不正な更新は防止
+- 更新頻度は15秒に設定
 
 #### 実装詳細
-- **フック**: `useSessionHeartbeat` - Realtime監視と定期更新を管理
+- **フック**: `useSessionHeartbeat` - 定期的にServer Actionで`last_active_at`を更新
 - **コンポーネント**: `WaitingPageContent` - セッションステータス表示
-- **状態表示**: 接続中/更新中/エラーの3状態をインジケーターで表示
+- **状態表示**: 接続中/エラーの2状態をインジケーターで表示
 
 ---
 
