未実装用のページ作成

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -54,7 +54,7 @@
 - [x] ユーザーは選択肢を1つ選んで回答できる
 - [x] 回答後は選択を変更できない
 - [x] 回答済みの場合、その旨が表示される（「回答済み」等）
-- [ ] 未実装の`quiz_control.current_screen`の場合は未実装画面が表示される(ここでは`waiting`と`question`のみ実装済みの画面が表示されるイメージ)
+- [x] 未実装の`quiz_control.current_screen`の場合は未実装画面が表示される(ここでは`waiting`と`question`のみ実装済みの画面が表示されるイメージ)
 
 #### 技術的考慮事項
 - 問題表示時刻を記録（回答時間計測の開始点）
