feat: セッションハートビートとクイズ問題表示の実装 (US-003-02) (#14)
* feat: セッションハートビートとクイズ問題表示の実装 (US-003-02)

- SessionContextでセッションハートビートを統合管理
- useSessionHeartbeatフックの改良とテスト追加
- クイズ問題表示コンポーネントの新規作成（QuestionDisplay, QuestionContent）
- 選択肢ボタン関連コンポーネント（ChoiceButton, ChoiceButtonGroup）
- getQuizStatus, getQuestionWithChoices, submitAnswerのServer Actionsを実装
- セッション状態通知UIの改善
- レアルタイム通信ドキュメント更新
- 仕様ドキュメント (US-001, US-003) の完成度チェックボックス更新

テスト: ✅ useSessionHeartbeatテスト追加・改良完了

* lint修正

* 未実装用のページ作成

* CI修正

* seedデータの更新

* supabaseのセットアップ追加

* componentの移動

* page.tsxをserver componentに変更

* テスト追加

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -42,18 +42,19 @@
 **So that** 同時に問題を解かせることができる
 
 #### 受け入れ基準
-- [ ] admin画面から「次の問題へ」ボタンをクリックできる
-- [ ] 全ユーザーの画面にクイズ問題が表示される
-- [ ] ユーザー画面の表示内容:
+- [x] admin画面から「次の問題へ」ボタンをクリックできる
+- [x] 全ユーザーの画面にクイズ問題が表示される
+- [x] ユーザー画面の表示内容:
   - 問題番号（例: "第1ピリオド 問題3/15"）
   - 問題文
   - **問題画像（ある場合）**
   - 選択肢（2〜4個）
   - **各選択肢の画像（ある場合）**
   - 回答ボタン
-- [ ] ユーザーは選択肢を1つ選んで回答できる
-- [ ] 回答後は選択を変更できない
-- [ ] 回答済みの場合、その旨が表示される（「回答済み」等）
+- [x] ユーザーは選択肢を1つ選んで回答できる
+- [x] 回答後は選択を変更できない
+- [x] 回答済みの場合、その旨が表示される（「回答済み」等）
+- [x] 未実装の`quiz_control.current_screen`の場合は未実装画面が表示される(ここでは`waiting`と`question`のみ実装済みの画面が表示されるイメージ)
 
 #### 技術的考慮事項
 - 問題表示時刻を記録（回答時間計測の開始点）
