feat: 正解発表画面の実装と回答結果取得機能 (US-003-03)
- コンポーネントをquiz/_componentsに移動（コロケーション改善）
- AnswerDisplayコンポーネントで正解・解説を表示
- getAnswerResultで回答結果を取得するServer Action実装
- answer/page.tsxでリアルタイム同期と正解表示を実装
- 仕様書を実装内容で更新

テスト: 仕様確認済み

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -64,22 +64,20 @@
 ---
 
 ### US-003-03: 正解発表画面の表示
-**As an** admin  
-**I want to** 問題の正解を全ユーザーに表示する  
+**As an** admin
+**I want to** 問題の正解を全ユーザーに表示する
 **So that** ユーザーが自分の回答結果を確認できる
 
 #### 受け入れ基準
-- [ ] admin画面から「正解発表へ」ボタンをクリックできる
-- [ ] 全ユーザーの画面に正解発表が表示される
-- [ ] 表示内容:
+- [x] admin画面から「正解発表へ」ボタンをクリックできる
+- [x] 全ユーザーの画面に正解発表が表示される
+- [x] 表示内容:
   - 問題文
   - 全選択肢（正解にマーク表示）
   - 自分の選択した選択肢（正解/不正解の表示）
   - 回答時間（秒単位）
-- [ ] 未回答だった場合、その旨が表示される
-- [ ] 以下のユーザーは次の画面にいけず、`quiz_control.current_period_id`が変わるまで脱落画面が表示される
-  - [ ] 未回答のユーザー
-  - [ ] 正解を選べなかったユーザー
+- [x] 未回答だった場合、その旨が表示される
+- [x] 未回答もしくは不正解だった場合も脱落はせず、次の問題も解答ができる
 
 #### 技術的考慮事項
 - 正解データの取得
@@ -87,23 +85,23 @@
 
 ---
 
-### US-003-04: ピリオド終了画面の表示
-**As an** admin  
-**I want to** ピリオドを終了し、終了画面を表示する  
-**So that** 次のステップに進むことができる
+### US-003-04: 休憩画面の表示
+**As an** admin
+**I want to** 休憩画面を全ユーザーに表示する
+**So that** ユーザーは自動的に休憩画面が表示される
 
 #### 受け入れ基準
-- [ ] admin画面から以下の操作ができる:
-  - 「ピリオドを強制終了」ボタン
-  - ピリオド内の全問題が終了した場合、自動的に終了画面へ
-- [ ] 全ユーザーの画面にピリオド終了画面が表示される
-- [ ] 表示内容:
-  - ピリオド名
-  - 「集計中...」等のメッセージ
-- [ ] admin画面から「集計結果へ」ボタンで次に進める
+- [ ] admin画面から「休憩へ」ボタンをクリックできる
+- [ ] admin画面のイベント詳細から休憩画面に表示する画像を複数枚設定できる
+- [ ] 全ユーザーの画面に休憩画面が表示される
+- [ ] 休憩画面ではadmin画面で設定した休憩画像がランダムで表示される(5秒ごとに画像が切り替わる)
+  - [ ] 設定されていない場合は不自然にならないような画面を表示する
 
 #### 技術的考慮事項
-- ピリオドの状態管理（進行中/終了）
+- 既存の `quiz-images` バケットを `public` に変更、`uploadQuizImage`というserver actionsを`uploadQuizImage`に変更し、filePathを引数で受け取る形に変更
+  - ドキュメント系も修正する
+- 正解データの取得
+- 個々のユーザーの回答結果の表示
 
 ---
 
@@ -131,20 +129,7 @@
 
 ---
 
-### US-003-06: 最終結果待機画面の表示
-**As an** admin  
-**I want to** 全ピリオド終了後に最終結果待機画面を表示する  
-**So that** 全体の集計を行える
-
-#### 受け入れ基準
-- [ ] 全ピリオド終了後、admin画面から「最終結果待機へ」ボタンをクリックできる
-- [ ] 全ユーザーの画面に最終結果待機画面が表示される
-- [ ] 表示内容:
-  - 「全ピリオド終了！最終集計中...」等のメッセージ
-
----
-
-### US-003-07: 最終結果画面の表示
+### US-003-06: 最終結果画面の表示
 **As an** admin  
 **I want to** 全ピリオドを通じた最終結果を表示する  
 **So that** 優勝者を発表できる
@@ -169,7 +154,7 @@
 
 ---
 
-### US-003-08: admin画面での進行状況確認
+### US-003-07: admin画面での進行状況確認
 **As an** admin  
 **I want to** 現在の進行状況を確認する  
 **So that** 適切なタイミングで次に進める
@@ -178,12 +163,24 @@
 - [ ] admin画面に以下の情報が表示される:
   - 現在の画面状態（待機中、問題表示中、正解発表中など）
   - 現在のピリオド名と問題番号
-  - 回答済みユーザー数 / 全ユーザー数
-  - 未回答ユーザーのリスト（ニックネーム）
+  - 回答済みユーザー数
+  - 現在のピリオドの上位10位の正解数とピリオドの合計解答時間
+  - 全体ランキングの上位10位の正解数と全クイズの合計解答時間
 - [ ] 情報はリアルタイムで更新される
 
 #### 技術的考慮事項
 - WebSocketまたはポーリングによるリアルタイム更新
+
+---
+
+### US-003-08: [仕様変更] 待機画面以降もユーザー登録ができるようにする
+**As an** user
+**I want to** クイズが進行している状態でもユーザー登録ができる
+**So that** ユーザー登録ができるかどうかのロジックを変更する
+
+#### 受け入れ基準
+- [ ] 待機画面以降でも新しいユーザーがイベントに参加できる
+- [ ] 登録前に終了したクイズに関しては、ランキング集計時には未回答のユーザーと同様の扱いにする
 
 ---
 
