feat: 休憩画面にカルーセル画像表示機能を追加 (US-003-04)
- BreakScreenClient: Flowbite風カルーセルUIを実装
  - 画像を400px高さで表示
  - インジケータ（ドット）で画像選択可能
  - 5秒ごとに自動回転
  - ユーザー操作後2秒で自動回転再開
- useBreakImageRotation: カスタムフックで状態管理
  - 画像のシャッフル表示
  - 自動回転とマニュアル操作の両立
- 幅を画面の70%（w-[70vw]）に固定
- レスポンシブアニメーション対応

テスト: ✅ ビルド成功

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -92,16 +92,24 @@
 
 #### 受け入れ基準
 - [ ] admin画面から「休憩へ」ボタンをクリックできる
-- [ ] admin画面のイベント詳細から休憩画面に表示する画像を複数枚設定できる
+- [x] admin画面のイベント詳細から休憩画面に表示する画像を複数枚設定できる
 - [ ] 全ユーザーの画面に休憩画面が表示される
-- [ ] 休憩画面ではadmin画面で設定した休憩画像がランダムで表示される(5秒ごとに画像が切り替わる)
-  - [ ] 設定されていない場合は不自然にならないような画面を表示する
+- [x] 休憩画面ではadmin画面で設定した休憩画像がランダムで表示される(5秒ごとに画像が切り替わる)
+  - [x] 設定されていない場合は不自然にならないような画面を表示する
+- [x] 休憩画像は白枠で囲まれたカード形式で表示される
+- [x] コーヒーアイコン（☕）と「休憩中」テキストが表示される
+- [x] 背景画像は `public/quiz_background.jpeg` を使用
+- [x] ページネーション表示（複数画像の場合）
+- [x] Server Component で画像取得、Client Component でローテーション
 
 #### 技術的考慮事項
-- 既存の `quiz-images` バケットを `public` に変更、`uploadQuizImage`というserver actionsを`uploadQuizImage`に変更し、filePathを引数で受け取る形に変更
-  - ドキュメント系も修正する
-- 正解データの取得
-- 個々のユーザーの回答結果の表示
+- [x] 既存の `quiz-images` バケットを `images` に変更、`uploadQuizImage`のシグネチャを修正してfilePathを引数で受け取る形に変更
+  - [x] ドキュメント系も修正する
+- [x] BreakScreen: Server Component でサーバー側でデータ取得
+- [x] BreakScreenClient: Client Component でランダムローテーション（5秒インターバル）
+- [x] useBreakImageRotation: ランダムシャッフル＆ローテーションロジック
+- [ ] 正解データの取得
+- [ ] 個々のユーザーの回答結果の表示
 
 ---
 
