feat: リセット機能の実装 (US-003-05)
- quiz_control.current_screen を'waiting'にリセット
- 問題表示記録 (question_displays) を全削除
- ユーザーの回答データ (answers) を全削除
- リセット画面での確認ダイアログを追加
- 仕様ドキュメント (003-画面遷移制御.md) を更新

実装内容:
- resetEvent Server Action を追加
- CurrentStateDisplay にリセットボタンを追加
- QuizControlPanel でリセット後の状態遷移を管理
- 完全なテストカバレッジを提供

テスト: ✅ All tests passing

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -113,7 +113,25 @@
 
 ---
 
-### US-003-05: ピリオド集計結果画面の表示
+### US-003-05: リセット機能
+**As an** admin
+**I want to** イベントのリセットができる
+**So that** ユーザーの回答や問題表示の記録を削除する
+
+#### 受け入れ基準
+- [x] admin画面の画面制御から「リセット」ボタンをクリックできる
+- [x] リセットをするとユーザーの回答や問題表示の記録が削除され、再度待機状態に変わる
+- [x] 「リセット」を押下すると確認が入り、データが削除される旨が表示される
+
+#### 技術的考慮事項
+- イベントの画面制御でリセットを押すと以下になる
+  - quiz_controlが`waiting`に変更される
+  - イベントに紐づく`question_displays`の行が全て削除される
+  - イベントに紐づく`answers`の行が全て削除される
+
+---
+
+### US-003-06: ピリオド集計結果画面の表示
 **As an** admin  
 **I want to** ピリオドの集計結果を全ユーザーに表示する  
 **So that** ピリオドのチャンピオンを発表できる
@@ -137,7 +155,7 @@
 
 ---
 
-### US-003-06: 最終結果画面の表示
+### US-003-07: 最終結果画面の表示
 **As an** admin  
 **I want to** 全ピリオドを通じた最終結果を表示する  
 **So that** 優勝者を発表できる
@@ -162,7 +180,7 @@
 
 ---
 
-### US-003-07: admin画面での進行状況確認
+### US-003-08: admin画面での進行状況確認
 **As an** admin  
 **I want to** 現在の進行状況を確認する  
 **So that** 適切なタイミングで次に進める
@@ -181,7 +199,7 @@
 
 ---
 
-### US-003-08: [仕様変更] 待機画面以降もユーザー登録ができるようにする
+### US-003-09: [仕様変更] 待機画面以降もユーザー登録ができるようにする
 **As an** user
 **I want to** クイズが進行している状態でもユーザー登録ができる
 **So that** ユーザー登録ができるかどうかのロジックを変更する
