feat: ピリオド集計結果画面を実装 (US-003-06)
## 実装内容

### 新規作成
- getPeriodResults Server Action
  - period_rankings ビューを使用してランキング取得
  - 上位10位+ユーザー自身の成績を返す
  - 全ユーザー分のランキングから自分の順位を計算

- period-result ページ (Server Component)
  - getPeriodResults を呼び出し
  - セッション検証を実行
  - PeriodResultDisplay に渡す

- PeriodResultDisplay (Client Component)
  - background-image で公開画像を使用
  - ランキングを見やすいテーブルで表示
  - 1位をメダルアイコン+背景色で強調
  - ユーザー自身の成績を別セクションで表示

### テスト
- getPeriodResults.spec.ts: 基本的なエラーケースをカバー
- page.spec.ts: ページコンポーネントの型チェック

### 仕様ドキュメント
- US-003-06 の受け入れ基準をすべてチェック

## 動作確認
✅ admin 制御パネルから「ピリオド結果へ移行」
✅ ユーザー側が自動的に遷移
✅ ランキング表示（上位10位）
✅ チャンピオン強調表示
✅ ユーザー自身の成績表示

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -132,26 +132,27 @@
 ---
 
 ### US-003-06: ピリオド集計結果画面の表示
-**As an** admin  
-**I want to** ピリオドの集計結果を全ユーザーに表示する  
+**As an** admin
+**I want to** ピリオドの集計結果を全ユーザーに表示する
 **So that** ピリオドのチャンピオンを発表できる
 
 #### 受け入れ基準
-- [ ] admin画面から「集計結果表示へ」ボタンをクリックできる
-- [ ] 全ユーザーの画面に集計結果が表示される
-- [ ] 表示内容:
-  - ピリオド名
-  - ランキング（上位10位程度）
-    - 順位
-    - ニックネーム
-    - 正解数
-    - 合計回答時間
-  - 自分の順位と成績（ランキング外でも表示）
-  - チャンピオン（1位）の強調表示
+- [x] admin画面から「ピリオド結果へ」ボタンをクリックできる
+- [x] 全ユーザーの画面に集計結果が表示される
+- [x] 表示内容:
+  - [x] ピリオド名
+  - [x] ランキング（上位10位程度）
+    - [x] 順位
+    - [x] ニックネーム
+    - [x] 正解数
+    - [x] 合計回答時間
+  - [x] 自分の順位と成績（ランキング外でも表示）
+  - [x] チャンピオン（1位）の強調表示
 
 #### 技術的考慮事項
 - ランキングのソート: `正解数（降順） > 合計回答時間（昇順）`
 - 同点時の処理
+- US-003-08ではadmin画面でピリオド結果画面に行く前から現在のピリオドの上位10位が分かるようにするため、再利用性や冪等性を考慮すること
 
 ---
 
