feat: 最終結果画面の実装 (US-003-07)
- getFinalResults Server Action を実装
  - event_rankings ビューから全体ランキング取得（上位20位）
  - ユーザー自身の順位と成績を集計
  - 各ピリオドのチャンピオン一覧を取得

- FinalResultDisplay コンポーネント実装
  - イベント名、全体ランキング、優勝者強調表示
  - ピリオドチャンピオン一覧表示
  - レスポンシブデザイン対応

- final-result/page.tsx を修正
  - セッション検証 → getFinalResults 呼び出し
  - エラーハンドリング実装

- テスト実装
  - getFinalResults: 9テスト合格
  - final-result/page: データ構造検証

受け入れ基準:
✅ admin画面から「最終結果表示へ」ボタンをクリックできる
✅ 全ユーザーの画面に最終結果が表示される
✅ 全体ランキング（上位20位）表示
✅ ユーザーの順位と成績表示
✅ 優勝者（1位）の特別な強調表示
✅ 各ピリオドのチャンピオン一覧表示

テスト: ✅ 357 tests passing

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -157,33 +157,34 @@
 ---
 
 ### US-003-07: 最終結果画面の表示
-**As an** admin  
-**I want to** 全ピリオドを通じた最終結果を表示する  
+**As an** admin
+**I want to** 全ピリオドを通じた最終結果を表示する
 **So that** 優勝者を発表できる
 
 #### 受け入れ基準
-- [ ] admin画面から「最終結果表示へ」ボタンをクリックできる
-- [ ] 全ユーザーの画面に最終結果が表示される
-- [ ] 表示内容:
-  - イベント名
-  - 全体ランキング（上位20位程度）
-    - 順位
-    - ニックネーム
-    - 全体正解数
-    - 全体合計回答時間
-  - 自分の順位と成績
-  - 優勝者（1位）の特別な強調表示
-  - 各ピリオドのチャンピオン一覧
+- [x] admin画面から「最終結果表示へ」ボタンをクリックできる
+- [x] 全ユーザーの画面に最終結果が表示される
+- [x] 表示内容:
+  - [x] イベント名
+  - [x] 全体ランキング（上位20位程度）
+    - [x] 順位
+    - [x] ニックネーム
+    - [x] 全体正解数
+    - [x] 全体合計回答時間
+  - [x] 自分の順位と成績
+  - [x] 優勝者（1位）の特別な強調表示
+  - [x] 各ピリオドのチャンピオン一覧
 
 #### 技術的考慮事項
-- 全ピリオドを横断した集計
-- ランキングのソート: `全体正解数（降順） > 全体合計回答時間（昇順）`
+- [x] 全ピリオドを横断した集計
+- [x] ランキングのソート: `全体正解数（降順） > 全体合計回答時間（昇順）`
+- [x] US-003-08ではadmin画面でピリオド結果画面に行く前から現在のピリオドの上位10位が分かるようにするため、再利用性や冪等性を考慮すること
 
 ---
 
 ### US-003-08: admin画面での進行状況確認
-**As an** admin  
-**I want to** 現在の進行状況を確認する  
+**As an** admin
+**I want to** 現在の進行状況を確認する
 **So that** 適切なタイミングで次に進める
 
 #### 受け入れ基準
