feat: admin画面での進行状況確認実装（US-003-08）
- ランキング型定義・Server Action実装（getRankings）
- Realtime購読フックをポーリング方式に変更（usePolledRankings）
  - 5秒ごとにランキングデータを定期更新
- RankingsPanel コンポーネント実装
  - ピリオドランキング（Top 10）とイベント全体ランキング（Top 10）をタブで切り替え
  - メダル絵文字、合計時間（小数点第3位）表示
  - リアルタイム更新インジケーター付き
- QuizControlPanel に RankingsPanel を統合
  - currentPeriodIdが設定されている場合のみランキングを表示

テスト: ✅ pnpm build成功

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -188,16 +188,16 @@
 **So that** 適切なタイミングで次に進める
 
 #### 受け入れ基準
-- [ ] admin画面に以下の情報が表示される:
+- [x] admin画面に以下の情報が表示される:
   - 現在の画面状態（待機中、問題表示中、正解発表中など）
   - 現在のピリオド名と問題番号
   - 回答済みユーザー数
   - 現在のピリオドの上位10位の正解数とピリオドの合計解答時間
   - 全体ランキングの上位10位の正解数と全クイズの合計解答時間
-- [ ] 情報はリアルタイムで更新される
+- [x] 情報は5秒ごとに更新される
 
 #### 技術的考慮事項
-- WebSocketまたはポーリングによるリアルタイム更新
+- Supabase Realtimeを用いてランキングデータを取得する
 
 ---
 
