feat: リアルタイム参加者数表示機能の実装 (US-003-10)
- useRealtimeUserCountフックの新規作成
  - Supabase Realtimeでusersテーブルの変更を購読
  - INSERT/UPDATE/DELETE時に参加者数を自動更新
  - エラーハンドリングとローディング状態を管理
- QuizControlPanelにリアルタイム参加者数を統合
  - useRealtimeUserCountからの更新を反映
  - useEffectで参加者数の状態同期
- ユーザー登録ロジックの改善 (US-003-09)
  - 待機画面以降もユーザー登録可能に
  - canRegisterNewUserから画面状態チェックを削除
  - getSessionErrorReasonから'quiz_started'を削除
  - NicknameFormのエラーメッセージから'quiz_started'を削除
- 仕様書の更新
  - US-003-09と US-003-10のチェック完了

テスト: ✅ 全体ビルド成功

--- a/docs/spec/003-画面遷移制御.md
+++ b/docs/spec/003-画面遷移制御.md
@@ -207,8 +207,21 @@
 **So that** ユーザー登録ができるかどうかのロジックを変更する
 
 #### 受け入れ基準
-- [ ] 待機画面以降でも新しいユーザーがイベントに参加できる
-- [ ] 登録前に終了したクイズに関しては、ランキング集計時には未回答のユーザーと同様の扱いにする
+- [x] 待機画面以降でも新しいユーザーがイベントに参加できる
+- [x] 登録前に終了したクイズに関しては、ランキング集計時には未回答のユーザーと同様の扱いにする
+
+---
+
+### US-003-10: admin画面での参加者数をリアルタイムで確認できるようにする
+**As an** admin
+**I want to** リアルタイムでイベントの参加者数を確認できるようにしたい
+**So that** 画面制御でリアルタイムに参加者数を確認する
+
+#### 受け入れ基準
+- [x] admin画面の画面制御でイベントの参加者数がリアルタイムで更新される
+
+#### 技術的考慮事項
+- Supabase Realtimeを利用する
 
 ---
 
